# rs-music-tui

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: api.rs  app.rs  config.rs  main.rs
src/cli/: clap.rs
src/config/: behavior.rs  client_config.rs  keybinds.rs  mod.rs  theme.rs  user_config.rs
src/event/: events.rs  key.rs  mod.rs
src/handler/: input.rs
src/handlers/: album_tracks.rs  artist_detail.rs  artists.rs  common_key_events.rs  dialog.rs  empty.rs  error_screen.rs  help_menu.rs  home.rs  input.rs  library.rs  login.rs  lyric.rs  mod.rs  my_playlist.rs  playbar.rs  playlist.rs  recently_played.rs  search.rs  search_results.rs  subscribe_playlist.rs  track_table.rs
src/http/: api.rs  auth.rs  client.rs  common.rs  crypto.rs  mod.rs  request.rs  response.rs  route.rs  store.rs
src/model/: album.rs  artist.rs  context.rs  device.rs  dialog.rs  enums.rs  image.rs  login.rs  mod.rs  page.rs  playlist.rs  resp.rs  show.rs  table.rs  track.rs  user.rs
src/network/: cloud_music.rs  mod.rs  ncm.rs  network.rs
src/player/: fetch.rs  mod.rs  player.rs  track.rs
src/ui/: circle.rs  draw.rs  help.rs  mod.rs  theme.rs
src/util/: mod.rs
tests/: test_api.rs
